Upload from form doesn't work, but everything else should be working

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Scrumtastic</title>
-  </head>
-  <body>
-    <script src="/app.js" type="text/javascript"></script>
-  </body>
+
+<head>
+    <title>My Ass</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <img id="bannerImg" src="http://orig11.deviantart.net/5cd6/f/2011/017/2/0/diablo_ii_logo_render_by_digitaleva-d37dszc.png">
+  <div>
+      <button id="button">Upload your own!</button>
+  </div>
+  <div class='container'>
+  </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="/bundle.js" type="text/javascript"></script>
+</body>
+
 </html>
