--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img id="bannerImg" src="http://orig11.deviantart.net/5cd6/f/2011/017/2/0/diablo_ii_logo_render_by_digitaleva-d37dszc.png">
+  <img id="bannerImg" src="./images/Diablo-II-icon.png">
   <div>
       <button id="button">Upload your own!</button>
   </div>
